fix footer logos on mobile

--- a/app/components/Footer/index.module.css
+++ b/app/components/Footer/index.module.css
@@ -98,4 +98,11 @@
   .navSocial {
     align-items: center;
   }
+  .logos {
+    grid-row: 5;
+    flex-direction: column;
+  }
+  .logos img {
+    max-width: 100%;
+  }
 }
